# yocto-test-app

./: CMakeLists.txt
src/: main.cpp  main_test.cpp
src/terminal/: terminal.cpp  terminal.h
